--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  * {
+    font-family: Arial, sans-serif; 
+    color: #ffffff; 
+    line-height: 1.5; 
+  }
   
   /* ===========================
      HEADER
@@ -72,8 +78,21 @@
     padding: 120px;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
   
+  .text-overlay {
+    position: absolute; 
+    top: 35%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    color: #ffffff; 
+    text-align: center; 
+   
+    padding: 20px; 
+  
+  }
+
   .main-head.little {
     background-color: #c508a2;
     padding: 150px;
