--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
   
   .text-overlay {
     position: absolute; 
-    top: 35%; 
+    top: 40%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
     color: #ffffff; 
@@ -94,9 +94,15 @@
   }
 
   .main-head.little {
-    background-color: #c508a2;
-    padding: 150px;
-    margin: 0px 200px;
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0); 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
   }
   
   /* ===========================
